--- a/listas/listas.cbp
+++ b/listas/listas.cbp
@@ -34,6 +34,7 @@
 		<Unit filename="Lista.cpp" />
 		<Unit filename="Lista.h" />
 		<Unit filename="Menu.cpp" />
+		<Unit filename="Menu.h" />
 		<Unit filename="Node.h" />
 		<Unit filename="leitorDeArquivos.cpp" />
 		<Unit filename="main.cpp" />
